DatabaseSettings added using options pattern

--- a/Services/Feed/VideoSharingPlatform.Services.Feed.API/appsettings.json
+++ b/Services/Feed/VideoSharingPlatform.Services.Feed.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "DatabaseSettings": {
-    "CourseCollectionName": "Videos",
+    "VideoCollectionName": "Videos",
     "CategoryCollectionName": "Categories",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "FeedDb"
