Services added for category and video

--- a/Services/Feed/VideoSharingPlatform.Services.Feed.API/VideoSharingPlatform.Services.Feed.API.csproj
+++ b/Services/Feed/VideoSharingPlatform.Services.Feed.API/VideoSharingPlatform.Services.Feed.API.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\..\..\Shared\VideoSharingPlatform.Shared\VideoSharingPlatform.Shared.csproj" />
   </ItemGroup>
 
 </Project>
